cmake_minimum_required(VERSION 2.8.9)
project(TestVdk)
set(LIB_SRC test_vdk.cpp)
set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_C_COMPILER arm-xilinx-linux-gnueabi-gcc)
set(CMAKE_CXX_COMPILER arm-xilinx-linux-gnueabi-g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
include_directories(../include)
link_libraries(vdk)
add_executable(test_vdk ${LIB_SRC})
